--- a/style.css
+++ b/style.css
@@ -65,14 +65,12 @@ html, body {
   bottom: 0;
   width: 100%;
   height: 100%;
-  transform: translateY(0);
 }
 
 .block {
   position: absolute;
   height: 28px;
   background: var(--block);
-  left: 0;
   border-radius: 4px;
 }
 
@@ -89,12 +87,8 @@ html, body {
   z-index: 20;
 }
 
-#overlay p {
-  font-size: 28px;
-  margin-bottom: 16px;
-}
-
 #overlay button {
+  margin-top: 16px;
   padding: 12px 20px;
   font-size: 16px;
   border: none;
